# anihub-cli

./: .gitignore  123.md  123.txt  Cargo.toml  LICENSE  README.md  README.uk.md  errors.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
docs/: anihub-api.md  index.html
src/: atomic_file.rs  cache.rs  diagnostics.rs  discord.rs  library_refresh.rs  main.rs  moonanime.rs  platform.rs  playback.rs  poster_cache.rs  prefetch_bg.rs  resource_coordinator.rs  settings.rs
src/api/: anilist.rs  client.rs  franchise.rs  grouper.rs  mod.rs  models.rs  parser.rs  resource.rs
src/player/: mod.rs
src/storage/: history.rs  mod.rs
src/ui/: app.rs  keys.rs  mod.rs  reducer.rs  render.rs
src/ui/app/: content_ui.rs  input.rs  library_actions.rs  library_catalog.rs  library_navigation.rs  library_projection.rs  library_sources.rs  library_state.rs  library_sync.rs  playback_ui.rs  search_actions.rs  search_navigation.rs  search_state.rs  settings_ui.rs
src/ui/render/: library.rs  search.rs  settings.rs
tests/fixtures/ashdi/: player-escaped-query.html  player-single-quoted.html  player-without-stream.html
tests/install/: test_install.sh
