[package]
name = "anihub-cli"
version = "0.2.9"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
directories = "6.0.0"
hex = "0.4.3"
image = "0.25.10"
interprocess = "2.4.0"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net", "process", "time"] }
tokio-util = { version = "0.7.18", features = ["io"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true # Прибираємо дебаг-символи, щоб файл був меншим
