[package]
name = "anihub-cli"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
description = "Unofficial terminal client for browsing and watching anime from AniHub"
license = "MIT"
repository = "https://github.com/NEO-LAX/anihub-cli"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
directories = "6.0.0"
hex = "0.4.3"
image = "0.25.10"
moka = { version = "0.12", features = ["sync"] }
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true # Прибираємо дебаг-символи, щоб файл був меншим
